[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/scenes/misc/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/misc/hud/eyes/eyes_under.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/misc/hud/eyes/BW_eyes.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/misc/hud/ether/ether_bar_under.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/misc/hud/ether/ether_bar_over.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/misc/hud/ether/ether_bar_progress.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/misc/hud/health/health_bar_under.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/misc/hud/health/health_bar_progress_delay.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/misc/hud/health/health_bar_over.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/misc/hud/health/health_bar_progress.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/misc/hud/weapon_select/IRONRAIL.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/misc/hud/weapon_select/weapon_display.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/Basis33/basis33.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/Basis33/basis33.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/fonts/Basis33/basis33.ttf"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = SubResource( 6 )

[node name="hud" type="CanvasLayer"]
scale = Vector2( 1.2, 1.2 )
transform = Transform2D( 1.2, 0, 0, 1.2, 0, 0 )
script = ExtResource( 1 )

[node name="Under" type="Sprite" parent="."]
position = Vector2( 95.4167, 87.7083 )
scale = Vector2( 3.35, 3.35 )
texture = ExtResource( 2 )

[node name="Face" type="Sprite" parent="."]
position = Vector2( 95.4167, 94.375 )
scale = Vector2( 0.869046, 0.869046 )
texture = ExtResource( 3 )

[node name="StatusBars" type="Node2D" parent="."]
editor/display_folded = true

[node name="EP" type="Node2D" parent="StatusBars"]
position = Vector2( -171, 3 )
scale = Vector2( 3.5, 3.5 )

[node name="TextureProgress" type="TextureProgress" parent="StatusBars/EP"]
margin_left = 51.0
margin_top = 1.0
margin_right = 141.0
margin_bottom = 21.0
step = 0.01
page = 1.0
value = 99.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="DELAY" type="Node2D" parent="StatusBars"]
position = Vector2( -1.64, -1.4 )
scale = Vector2( 2.4, 2.4 )

[node name="TextureProgress" type="TextureProgress" parent="StatusBars/DELAY"]
margin_left = 8.0
margin_top = 7.0
margin_right = 118.0
margin_bottom = 20.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )

[node name="HP" type="Node2D" parent="StatusBars"]
position = Vector2( -160, 1 )
scale = Vector2( 2.4, 2.4 )

[node name="TextureProgress" type="TextureProgress" parent="StatusBars/HP"]
margin_left = 73.6
margin_top = 6.35417
margin_right = 183.6
margin_bottom = 20.3542
value = 100.0
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="WeaponSelect" type="Node2D" parent="."]
editor/display_folded = true

[node name="WeaponSwitch" type="Sprite" parent="WeaponSelect"]
position = Vector2( 1067.5, 622.5 )
scale = Vector2( 4.30208, 4.30208 )
texture = ExtResource( 11 )

[node name="WeaponDisplay" type="Node2D" parent="WeaponSelect"]
scale = Vector2( 2.4, 2.4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="WeaponSelect/WeaponDisplay"]
position = Vector2( 401.736, 258.68 )
scale = Vector2( 1.51635, 1.51635 )
frames = SubResource( 1 )
animation = "idle"

[node name="WeaponData" type="Node2D" parent="WeaponSelect"]
scale = Vector2( 0.5, 0.5 )

[node name="Name" type="Label" parent="WeaponSelect/WeaponData"]
margin_left = 1570.0
margin_top = 1232.0
margin_right = 2025.0
margin_bottom = 1264.0
custom_fonts/font = SubResource( 3 )
text = "WHISPERHELD RANGER "
valign = 1

[node name="AmmoType" type="Label" parent="WeaponSelect/WeaponData"]
margin_left = 2053.0
margin_top = 1230.0
margin_right = 2153.0
margin_bottom = 1262.0
custom_fonts/font = SubResource( 5 )
text = "CAL45"
align = 1
valign = 1

[node name="Ammo" type="Label" parent="WeaponSelect/WeaponData"]
margin_left = 2162.0
margin_top = 1230.0
margin_right = 2320.0
margin_bottom = 1262.0
custom_fonts/font = SubResource( 7 )
text = "89"
align = 1
valign = 1

[node name="Timers" type="Node2D" parent="."]
editor/display_folded = true

[node name="DELAY_SPEED" type="Timer" parent="Timers"]
wait_time = 0.01

[node name="FADING_COUNTDOWN" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Timers/DELAY_SPEED" to="." method="_on_DELAY_SPEED_timeout"]
[connection signal="timeout" from="Timers/FADING_COUNTDOWN" to="." method="_on_FADING_COUNTDOWN_timeout"]
